examples/type_checker/000.cstar
int x = 20;
int p = x;
int w = 20.23;
void s = 30;


main() :: void {
  int a = 10;
  float b = 12.24;
  
  // should be passed
  int r = a + b + 10;

  bool k = true;

  int x = 50;
  // error
  bool z = x + k; 

  a = z;
  b = r;

  if(x > 10) {
    int e = 21;
    bool t = e;
  }
  ret;
}

// float* < usize < uint* <? isize < int* < bool
// float128 < float64 < float32 < size < uint128 < uint64 < uint32 < uint8 < isize < int64 < int32 < int16 < int8 < char < bool
/*
  int p for all primitive types are okay.
*/